# the-way

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
ci/: before_deploy.sh  script.sh
src/: config.rs  configuration.rs  errors.rs  gist.rs  language.rs  languages.yml  lib.rs  main.rs  the_way.yml  utils.rs
src/the_way/: cli.rs  database.rs  filter.rs  gist.rs  mod.rs  search.rs  snippet.rs  snippets.rs  stats.rs
tests/: cli.rs
tests/data/: snippets.json
