[package]
name = "the-way"
version = "0.20.2"
edition = "2021"
authors = ["Ninjani"]
description = "A code snippets manager for your terminal"
repository = "https://github.com/out-of-cheese-error/the-way"
readme = "README.md"
license = "MIT"
keywords = ["cli", "code", "snippets"]
categories = ["command-line-utilities"]
exclude = [
    "tests/",
    "ci/",
    ".travis.yml",
]

[dependencies]
# Argument parsing
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"

# Configuration management
confy = "0.5.1"
directories-next = "1.0.2"

# Error management
eyre = "0.6.12"
color-eyre = { version = "0.6.2", default-features = false }
thiserror = "1.0.56"

# Database related
sled = "0.34.7"
bincode = "1.3.3"

# Serializing
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
serde_yaml = "0.9.31"

# Parsing and manipulating dates
chrono = { version = "0.4.33", features = ["serde"] }
chrono-english = "0.1.7"

# Taking user input and showing progress
dialoguer = { version = "0.11.0", features = ["completion", "history", "fuzzy-select"] }
indicatif = "0.17.7"

# Fuzzy search
skim = "0.10.4"

# Terminal syntax highlighting
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"] }
hex = "0.4.3"
grep-cli = "0.1.10"
termcolor = "1.4.1"

# Sync to Gist/GitLab
ureq = { version = "2.9.4", features = ["json"] }
strum = "0.26.1"
strum_macros = "0.26.1"

# pattern filter and filling shell script variables
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.9.0"
expectrl = "0.7.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
clipboard = "0.5.0"

[package.metadata.deb]
extended-description-file = "README.md"
